WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129688
Crashes and assertions running iOS compositing tests
https://bugs.webkit.org/show_bug.cgi?id=129688
Summary
Crashes and assertions running iOS compositing tests
Simon Fraser (smfr)
Reported
2014-03-04 11:25:35 PST
Crashes and assertions running iOS compositing tests
Attachments
Patch
(1.87 KB, patch)
2014-03-04 11:34 PST
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-03-04 11:34:27 PST
Created
attachment 225797
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-03-04 11:38:34 PST
https://trac.webkit.org/r165064
Simon Fraser (smfr)
Comment 3
2014-03-04 11:39:05 PST
<
rdar://problem/16223973
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug