Crashes and assertions running iOS compositing tests https://bugs.webkit.org/show_bug.cgi?id=129688

Reviewed by Dean Jackson.

When a layer is no longer composited, we need to unregister it
from the scrolling coordinator, and remove it from m_scrollCoordinatedLayers.

Tested by compositing tests on iOS.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::updateBacking):

Canonical link: https://commits.webkit.org/147728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165064 268f45cc-cd09-0410-ab3c-d52691b4dbfc